# tdm

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  build.bat  build_filename.py  cwiotmgr.py  deploy.py  icons.qrc  pyproject.toml  requirements.txt  requirements_build.txt  requirements_dev.txt  setup.py  status8.json  tdm.py  tdmgr.py  tdmgr.spec  tdmgr32.spec  tdmgr_mac.spec  tdmgr_x64.spec  tox.ini
.github/: release.yml
.github/workflows/: build.yml  code_styling.yml  develop.yml  format.yml  main.yml  master.yml  pytest.yml  release.yml  release_pypi.yml  ruff.yml  test-build.yml
GUI/: BSSID.py  Broker.py  Buttons.py  ClearLWT.py  Console.py  DeviceConfig.py  DeviceConsole.py  DeviceEdit.py  DeviceRules.py  DeviceTelemetry.py  Devices.py  DevicesList.py  GPIO.py  Light.py  Modules.py  Patterns.py  PayloadView.py  Power.py  Prefs.py  Rules.py  SetOptions.py  Switches.py  Telemetry.py  Templates.py  Timers.py  UpdateDevices.py  __init__.py  common.py  console.py  devices.py  icons.py  rules.py  widgets.py
GUI/delegates/: devices.py
GUI/dialogs/: __init__.py  broker.py  bssid.py  buttons.py  clear_lwt.py  gpio.py  modules.py  patterns.py  power.py  preferences.py  prefs.py  setoptions.py  switches.py  templates.py  timers.py
GUI/dialogs/modbus/: common.py  energy.py
Util/: __init__.py  commands.json  commands.py  models.py  mqtt.py  nodes.py  setoptions.json  setoptions.py
models/: devices.py
schemas/: result.py
tdmgr/: mqtt.py  run.py  tdmgr.py
tdmgr/GUI/: common.py  console.py  devices.py  icons.py  rules.py  telemetry.py  widgets.py
tdmgr/GUI/delegates/: devices.py
tdmgr/GUI/dialogs/: __init__.py  broker.py  bssid.py  buttons.py  clear_lwt.py  gpio.py  main.py  modules.py  patterns.py  power.py  prefs.py  setoptions.py  shutter_control.py  switches.py  templates.py  timers.py
tdmgr/models/: devices.py  roles.py
tdmgr/schemas/: common.py  discovery.py  result.py  rules.py  status.py
tdmgr/tasmota/: commands.py  common.py  device.py  discovery.py  environment.py  setoptions.py
tdmgr/util/: __init__.py  discovery.py  mqtt.py
tests/: conftest.py  test_device.py  test_environment.py  test_message.py  test_mqtt.py  test_tasmota_common.py
tests/status_parsing/: test_status_schemas.py
tests/status_parsing/jsonfiles/12.1.1.5/: STATUS.json  STATUS1.json  STATUS10.json  STATUS11.json  STATUS2.json  STATUS3.json  STATUS4.json  STATUS5.json  STATUS6.json  STATUS7.json
tests/status_parsing/jsonfiles/12.2.0.2/: STATUS.json  STATUS1.json  STATUS2.json
util/: __init__.py  commands.py  discovery.py  mqtt.py
(+106 files in other folders)
